2005-03-31  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_erase_ancestors): Accept zero arguments,
	and in such case print nothing.  (Important for scripting.)
	* commands.cc (automate):
	* monotone.texi (Automation):
	* tests/t_automate_erase_ancestors.at: Update accordingly.

2005-03-31  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_toposort): Accept zero arguments, and in
	such case print nothing.  (Important for scripting.)
	* commands.cc (automate):
	* monotone.texi (Automation):
	* tests/t_automate_toposort.at: Update accordingly.

2005-03-30  Richard Levitte  <richard@levitte.org>

	* contrib/Notify.pl: A new Perl hack to send change logs by
	email.

	* contrib/README: Add a quick description.

2005-03-30  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_leaves): New function.
	(automate_command): Add it.
	* commands.cc (automate): Synopsify it.
	* monotone.1: Add it.
	* monotone.texi (Automation, Commands): Likewise.
	
	* tests/t_automate_leaves.at: New test.
	* testsuite.at: Add it.

2005-03-30  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Automation): Make newly added sample outputs
	verbatim also.

2005-03-30  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_automate_toposort.at: New test.
	* tests/t_automate_ancestry_difference.at: New test.
	* tests/t_diff_first_rev.at: New test.
	* testsuite.at: Add them.
	
	* revision.cc (calculate_ancestors_from_graph): Do not keep an
	"interesting" set and return only ancestors from this set;
	instead, simply return all ancestors.  Returning a limited set of
	ancestors does not speed things up, nor reduce memory usage in
	common cases.  (The only time it would reduce memory usage is when
	examining only a small ancestor set, which the important case,
	'heads', does not; even then, erase_ancestors would need to intern
	the interesting revisions first so they got low numbers, which it
	doesn't.)
	(erase_ancestors): Adjust accordingly.